--- a/templates/home.html
+++ b/templates/home.html
@@ -26,10 +26,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
     <a href="/" class="w3-bar-item w3-button w3-hide-small w3-hover-white">OrderBook Bias </a>
     <a href="/trader_bias" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Trader Bias</a>
     <a href="/reddit_posts" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Reddit Posts</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">News</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hide-medium w3-hover-white">Clients</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hide-medium w3-hover-white">Partners</a>
+
   </div>
 </div>
 
@@ -62,7 +59,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
     </div>
     <div class="w3-third w3-container">
       <p class=" w3-padding-large w3-padding-32 w3-center"><image src="{{ url_for('static', filename = 'images/CoinbasePro1.png')}}" style = 'padding:0px 40px 0px 0px; width:380px; height:100px; margin-right: 300px'></p>
-      <p class=" w3-padding-large w3-padding-64 w3-center"><image src="{{ url_for('static', filename = 'images/CoinbasePro_OrderBook1.png')}}" style =' position: absolute;
+      <p class=" w3-padding-large w3-padding-64 w3-center"><image src="{{ url_for('static', filename = 'images/CoinbasePro_OrderBook1.png')}}" style ='width:430px; height:400; position: absolute;
           top: 210px;
           right: 25px;' ></p>
     </div>
@@ -76,7 +73,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
     </div>
     <div class="w3-third w3-container">
       <p class=" w3-padding-large w3-padding-32 w3-center"><image src="{{ url_for('static', filename = 'images/Binance1.png')}}" style = 'width:360px; height:100px; margin-right: 200px'></p>
-      <p class=" w3-padding-large w3-padding-64 w3-center"><image src="{{ url_for('static', filename = 'images/Binance_OrderBook1.png')}}" style =' position: absolute;
+      <p class=" w3-padding-large w3-padding-64 w3-center"><image src="{{ url_for('static', filename = 'images/Binance_OrderBook1.png')}}" style ='width:430px; height:400; position: absolute;
           top: 650px;
           right: 25px;' ></p>
     </div>
@@ -92,7 +89,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
     </div>
     <div class="w3-third w3-container">
       <p class=" w3-padding-large w3-padding-32 w3-center"><image src="{{ url_for('static', filename = 'images/Kraken.png')}}" style = 'padding:10px 0px 0px 0px; width:260px; height:60px;'></p>
-      <p class=" w3-padding-large w3-padding-64 w3-center"><image src="{{ url_for('static', filename = 'images/Kraken_OrderBook1.png')}}" style =' position: absolute;
+      <p class=" w3-padding-large w3-padding-64 w3-center"><image src="{{ url_for('static', filename = 'images/Kraken_OrderBook1.png')}}" style =' width:430px; height:400; position: absolute;
           top: 1050px;
           right: 10px;' ></p>
     </div>
@@ -106,7 +103,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
     </div>
     <div class="w3-third w3-container">
       <p class=" w3-padding-large w3-padding-32 w3-center"><image src="{{ url_for('static', filename = 'images/Bittrexx.png')}}" style = 'padding:0px 50px 0px 0px; width:450px; height:100px;'></p>
-      <p class=" w3-padding-large w3-padding-64 w3-center"><image src="{{ url_for('static', filename = 'images/Bittrex_OrderBook1.png')}}" style =' position: absolute;
+      <p class=" w3-padding-large w3-padding-64 w3-center"><image src="{{ url_for('static', filename = 'images/Bittrex_OrderBook1.png')}}" style ='width:430px; height:400; position: absolute;
           top: 1500px;
           right: 10px;' ></p>
     </div>
@@ -122,7 +119,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
     </div>
     <div class="w3-third w3-container">
       <p class=" w3-padding-large w3-padding-32 w3-center"><image src="{{ url_for('static', filename = 'images/Poloniex.png')}}" style = 'width:260px; height:60px;'></p>
-      <p class=" w3-padding-large w3-padding-64 w3-center"><image src="{{ url_for('static', filename = 'images/Poloniex_OrderBook1.png')}}" style =' padding:0px 0px 0px 10px ;position: absolute;
+      <p class=" w3-padding-large w3-padding-64 w3-center"><image src="{{ url_for('static', filename = 'images/Poloniex_OrderBook1.png')}}" style ='width:430px; height:400; padding:0px 0px 0px 10px ;position: absolute;
           top: 2000px;
           right: 10px;' ></p>
     </div>
