--- a/templates/trader_bias.html
+++ b/templates/trader_bias.html
@@ -26,10 +26,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
     <a href="/" class="w3-bar-item w3-button w3-hide-small w3-hover-white">OrderBook Bias</a>
     <a href="/trader_bias" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Trader Bias</a>
     <a href="/reddit_posts" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Reddit Posts</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">News</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hide-medium w3-hover-white">Clients</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hide-medium w3-hover-white">Partners</a>
+
   </div>
 </div>
 
@@ -46,7 +43,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
 <!-- Main content: shift it to the right by 250 pixels when the sidebar is visible -->
-<div class="w3-main" style="margin-left:250px">
+<div class="w3-main" style="padding: 20px 20px 20px 20px; margin-left:250px">
 
   <div class="w3-row w3-padding-64">
     <div class="w3-twothird w3-container">
@@ -67,9 +64,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
       <p class=" w3-padding-large w3-padding-32 w3-center"><image src="{{ url_for('static', filename = 'images/TradingView.png')}}" style = ' position: absolute;
         top: 35px;
         right: 0px; padding:0px 0px 0px 0px; width:320px; height:155px; margin-right: 0px'></p>
-      <p class=" w3-padding-large w3-padding-64 w3-center"><image src="{{ url_for('static', filename = 'images/Long_vs_Short.png')}}" style =' position: absolute;
+      <p class=" w3-padding-large w3-padding-64 w3-center"><image src="{{ url_for('static', filename = 'images/Long_vs_Short.png')}}" style ='padding: 20px 20px 20px 20px; position: absolute;
           top: 190px;
-          right: 0px; height: 210px; width: 430px;' ></p>
+          right: 0px; height: 240px; width: 430px;' ></p>
     </div>
   </div> 
 	
