Fixed graphing bugs

--- a/templates/reddit_posts.html
+++ b/templates/reddit_posts.html
@@ -62,7 +62,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
       <p class=" w3-padding-large w3-padding-32 w3-center"><image src="{{ url_for('static', filename = 'images/reddit.png')}}" style = ' position: absolute;
         top: 45px;
         right: 0px; padding:0px 0px 0px 0px; width:320px; height:130px; margin-right: 0px'></p>
-      <p class=" w3-padding-large w3-padding-64 w3-center"><image src="{{ url_for('static', filename = 'images/reddit_freq.png')}}" style ='padding:40px 40px 40px 40px; position: absolute;
+      <p class=" w3-padding-large w3-padding-64 w3-center"><image src="{{ url_for('static', filename = 'images/reddit_postss.png')}}" style ='padding:40px 40px 40px 40px; position: absolute;
           top: 190px;
           right: 0px; height: 300px; width: 430px;' ></p>
     </div>
